# pdf-translator-rs

./: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  flake.nix  rustfmt.toml
crates/pdf-translator-cli/: Cargo.toml
crates/pdf-translator-cli/src/: main.rs
crates/pdf-translator-core/: Cargo.toml
crates/pdf-translator-core/assets/: OFL.txt
crates/pdf-translator-core/examples/: debug_extraction.rs  debug_glyphs.rs  debug_overlay.rs  test_builtin_font.rs  test_text_mode.rs
crates/pdf-translator-core/src/: config.rs  error.rs  lib.rs  util.rs
crates/pdf-translator-core/src/cache/: disk.rs  key.rs  memory.rs  mod.rs
crates/pdf-translator-core/src/pdf/: document.rs  font.rs  mod.rs  overlay.rs  page_index.rs  render.rs  text.rs
crates/pdf-translator-core/src/translator/: mod.rs  openai.rs  traits.rs
crates/pdf-translator-core/tests/: integration.rs
crates/pdf-translator-web/: Cargo.toml  askama.toml
crates/pdf-translator-web/src/: helpers.rs  main.rs  page_store.rs  routes.rs  state.rs  templates.rs
crates/pdf-translator-web/src/routes/: batch.rs  download.rs  mod.rs  pages.rs  settings.rs  translate.rs  upload.rs  viewer.rs
crates/pdf-translator-web/static/: .gitkeep  app.js  preload.js  sse.js  style.css
crates/pdf-translator-web/templates/: app.html  base.html  index.html
crates/pdf-translator-web/templates/oob/: download_btn.html  pagination.html  translate_all_btn.html  translate_btn.html
crates/pdf-translator-web/templates/partials/: auto_translate_toggle.html  pagination.html  progress.html  settings_cleared.html  toolbar.html  translate_result.html  view_mode.html  viewer.html  viewer_fragment.html
