[workspace]
resolver = "2"
members = [
    "crates/pdf-translator-core",
    "crates/pdf-translator-cli",
    "crates/pdf-translator-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = ["PDF Translator Contributors"]
repository = "https://github.com/carjorvaz/pdf-translator-rs"
description = "A Rust-based PDF translation tool"
readme = "README.md"
keywords = ["pdf", "translation", "document"]
categories = ["text-processing", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1.0.103"

# PDF processing
mupdf = { version = "0.4", default-features = false, features = ["sys-lib"] }
lopdf = { git = "https://github.com/J-F-Liu/lopdf", rev = "8c454dd93d9c37e608c552a2b304d1d31d1cb2e1" }
image = { version = "0.25", default-features = false, features = ["png"] }
webp = "0.3"

# HTTP & Web
reqwest = { version = "0.12", features = ["json"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-gzip", "set-header"] }

# Templates
askama = "0.15"
askama_web = { version = "0.15", features = ["axum-0.8"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Config
config = "0.15"
toml = "0.8"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Environment
dotenvy = "0.15"

# Misc
md5 = "0.7"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
bytes = "1.11.1"
mime_guess = "2"
urlencoding = "2"

# Font handling
skrifa = "0.44"

# Strict lints for the entire workspace
[workspace.lints.rust]
unsafe_code = "deny"
# Allow missing docs - this is a private project
missing_docs = "allow"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Correctness
correctness = { level = "deny", priority = -1 }

# Suspicious code
suspicious = { level = "warn", priority = -1 }

# Style
style = { level = "warn", priority = -1 }

# Complexity
complexity = { level = "warn", priority = -1 }

# Performance
perf = { level = "warn", priority = -1 }

# Pedantic (very strict)
pedantic = { level = "warn", priority = -1 }

# Nursery (experimental but useful)
nursery = { level = "warn", priority = -1 }

# Cargo lints
cargo = { level = "warn", priority = -1 }

# Restrictions (opt-in strict lints)
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"

# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"

# Allow multiple crate versions (transitive deps we can't control)
multiple_crate_versions = "allow"
